# Stringx

./: CMakeLists.txt  LICENSE  README.md
include/: boolx.h  stringx.h
src/: stringx.c
